--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Default ignored files
-/shelf/
-/workspace.xml
+.idea/shelf/
+.idea/workspace.xml
 # Editor-based HTTP Client requests
-/httpRequests/
+.idea/httpRequests/
